# OCRPipe

./: CMakeLists.txt  README.md
src/: blendAll.cpp  main.cpp
